chore: refactor anon sessions handling
